--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 #container{
-  background: url("sea.jpeg") center center/cover no-repeat;
+  background: url("sea.jpg") center center/cover no-repeat;
   width: 100%;
   height: 100vh;
 }
