--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ body{
   color: whitesmoke;
 }
 
+#clear{
+  padding-top: 10%;
+  text-align: center;
+  font-size: 70px;
+  color: whitesmoke;
+}
+
 .card{
   width: 70px;
   height: 100px;
